# cpp-musicscrape

./: .gitmodules  CMakeLists.txt  LICENSE.txt  README.md
musicscrape/: musicscrape.cpp  musicscrape.hpp  qmusicscrape.cpp  qmusicscrape.hpp
test/: test_plain.cpp  test_qmusicscrape.cpp
